plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
    id 'com.google.devtools.ksp' version("2.3.9")
    id "org.jetbrains.kotlin.jvm" version "2.3.0"
}

version = "${project.mod_version}+${project.minecraft_version}"
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
    maven {
        url = "https://repo.hypixel.net/repository/Hypixel"
    }
}

loom {
    mixin {
        //defaultRefmapName.set("mixins.rsm.refmap.json")
        //useLegacyMixinAp = true
    }
    accessWidenerPath = file("src/main/resources/rsm.accesswidener")
}

ksp {
    arg("incremental", "false")
    arg("correctErrorTypes", "true")
}


dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    ksp(project("annotation-processor"))

    def lwjglVersion = property("minecraft_lwjgl_version")
    implementation "org.lwjgl:lwjgl-nanovg:$lwjglVersion"
    include "org.lwjgl:lwjgl-nanovg:$lwjglVersion"

    ["windows", "linux", "macos", "macos-arm64"].each { os ->
        implementation "org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-$os"
        include "org.lwjgl:lwjgl-nanovg:$lwjglVersion:natives-$os"
    }

    implementation "org.lwjgl:lwjgl-yoga:3.4.1"
    include "org.lwjgl:lwjgl-yoga:3.4.1"
    ["natives-linux", "natives-windows", "natives-macos", "natives-macos-arm64"].each {natives ->
        include("org.lwjgl:lwjgl-yoga:3.4.1:$natives")
        implementation("org.lwjgl:lwjgl-yoga:3.4.1:$natives")
    }

    implementation("net.hypixel:mod-api:${project.hypixel_mod_api_version}")

    annotationProcessor "org.projectlombok:lombok:1.18.46"
    compileOnly "org.projectlombok:lombok:1.18.46"
}

processResources {
	inputs.property "version", project.mod_version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

    toolchain { languageVersion = JavaLanguageVersion.of(25) }
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

tasks.register('deobfJar', Jar) {
    from sourceSets.main.output
}

tasks.named("compileJava") {
    dependsOn("kspKotlin")
}

sourceSets.main.java.srcDir(layout.buildDirectory.dir("generated/ksp/main/java"))


// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifact deobfJar
            groupId = project.maven_group
            artifactId = project.archives_base_name
            version = project.mod_version
        }
    }

	repositories {
        mavenLocal()
	}
}